--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Global Settings'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
-icon: 'gear'
+title: "Global Settings"
+description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
+icon: "gear"
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
@@ -57,12 +57,11 @@ Example: `mintlify`
   Hex color codes for your global theme
   <Expandable title="Colors">
     <ResponseField name="primary" type="string" required>
-      The primary color. Used for most often for highlighted content, section
-      headers, accents, in light mode
+      The primary color. Used for most often for highlighted content, section headers, accents, in light mode
     </ResponseField>
     <ResponseField name="light" type="string">
-      The primary color for dark mode. Used for most often for highlighted
-      content, section headers, accents, in dark mode
+      The primary color for dark mode. Used for most often for highlighted content, section headers, accents, in dark
+      mode
     </ResponseField>
     <ResponseField name="dark" type="string">
       The primary color for important buttons
@@ -103,7 +102,7 @@ Example: `mintlify`
     </ResponseField>
     <ResponseField name="url" type="string">
     If `link`: What the button links to.
-    
+
     If `github`: Link to the repository to load GitHub information from.
     </ResponseField>
     <ResponseField name="name" type="string">
@@ -114,8 +113,8 @@ Example: `mintlify`
 </ResponseField>
 
 <ResponseField name="versions" type="string[]">
-  Array of version names. Only use this if you want to show different versions
-  of docs with a dropdown in the navigation bar.
+  Array of version names. Only use this if you want to show different versions of docs with a dropdown in the navigation
+  bar.
 </ResponseField>
 
 <ResponseField name="anchors" type="Anchor[]">
@@ -172,8 +171,8 @@ Example: `mintlify`
       The name of the tab label.
     </ResponseField>
     <ResponseField name="url" type="string">
-      The start of the URL that marks what pages go in the tab. Generally, this
-      is the name of the folder you put your pages in.
+      The start of the URL that marks what pages go in the tab. Generally, this is the name of the folder you put your
+      pages in.
     </ResponseField>
   </Expandable>
 </ResponseField>
@@ -228,43 +227,41 @@ Example: `mintlify`
 <ResponseField name="openapi" type="string | string[]">
   A string or an array of strings of URL(s) or relative path(s) pointing to your
   OpenAPI file.
-  
-  Examples:
-  <CodeGroup>
-    ```json Absolute
-    "openapi": "https://example.com/openapi.json"
-    ```
-    ```json Relative
-    "openapi": "/openapi.json"
-    ```
-    ```json Multiple
-    "openapi": ["https://example.com/openapi1.json", "/openapi2.json", "/openapi3.json"]
-    ```
-  </CodeGroup>
+
+Examples:
+
+{" "}
+<CodeGroup>
+  ```json Absolute "openapi": "https://example.com/openapi.json" ``` ```json Relative "openapi": "/openapi.json" ```
+  ```json Multiple "openapi": ["https://example.com/openapi1.json", "/openapi2.json", "/openapi3.json"] ```
+</CodeGroup>
 
 </ResponseField>
 
 <ResponseField name="footerSocials" type="FooterSocials">
   An object of social media accounts where the key:property pair represents the social media platform and the account url.
-  
-  Example: 
-  ```json
-  {
-    "twitter": "https://twitter.com/mintlify",
-    "website": "https://mintlify.com"
-  }
-  ```
+
+Example:
+
+```json
+{
+  "twitter": "https://twitter.com/mintlify",
+  "website": "https://mintlify.com"
+}
+```
+
   <Expandable title="FooterSocials">
     <ResponseField name="[key]" type="string">
     One of the following values `website`, `facebook`, `twitter`, `discord`, `slack`, `github`, `linkedin`, `instagram`, `hacker-news`
-    
+
     Example: `twitter`
     </ResponseField>
     <ResponseField name="property" type="string">
     The URL to the social platform.
-    
+
     Example: `https://twitter.com/mintlify`
     </ResponseField>
+
   </Expandable>
 </ResponseField>
 
@@ -290,7 +287,7 @@ Example: `mintlify`
     </ResponseField>
     <ResponseField name="isHidden" type="boolean" default="false">
       Set to true to hide the dark/light mode toggle. You can combine `isHidden` with `default` to force your docs to only use light or dark mode. For example:
-      
+
       <CodeGroup>
       ```json Only Dark Mode
       "modeToggle": {
@@ -313,6 +310,6 @@ Example: `mintlify`
 </ResponseField>
 
 <ResponseField name="backgroundImage" type="string">
-  A background image to be displayed behind every page. See example with
-  [Infisical](https://infisical.com/docs) and [FRPC](https://frpc.io).
+  A background image to be displayed behind every page. See example with [Infisical](https://infisical.com/docs) and
+  [FRPC](https://frpc.io).
 </ResponseField>
